# BudgetBuddy

./: .env  .env.example  .replit  AutoForwardX_Documentation.md  BUG_REPORT.md  DIAGNOSTIC_CHECKLIST.md  FRONTEND_DOCUMENTATION.md  FUNCTION_DOCUMENTATION.md  README.md  TELEGRAM_BOT_README.md  UI_IMPLEMENTATION_GUIDE.md  alembic.ini  app.db  celery_worker.py  client_1.session  fix_database.py  index.html  init_db.py  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  redis.conf  replit.md  serve_dashboard.py  server.js  simple_serve.js  simple_server.js  start_server.py  start_session_manager.py  tailwind.config.js  telegram_bot.py  telegram_bot_enhanced.py  telegram_bot_simple.py  test.html  vite.config.ts  vite.replit.config.ts  vite_dev_server.js
.next/: app-build-manifest.json  build-manifest.json  trace
api/: __init__.py  accounts.py  admin.py  analytics.py  auth.py  forwarding.py  forwarding_old.py  forwarding_simple.py  payments.py  plan_validation.py  realtime.py  telegram.py  telegram_auth.py  telegram_auth_fixed.py  telegram_auth_production.py  telegram_auth_simple.py  telegram_fixed.py  telegram_otp.py  telegram_otp_fixed.py  telegram_production.py  telegram_production_simple.py  telegram_test.py  websocket.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
attached_assets/: Pasted--AutoForwardX-Web-UI-Telegram-Bot-Integration-Guide-1-Folder-File-Structure-frontend--1751359510469_1751359510470.txt  Pasted--Backend-Development-Part-3-Admin-Panel-Payments-Analytics-Security-Backend-Only-This-part-1751107394758_1751107394759.txt  (+50 more)
(+381 files in other folders)
