[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "alembic>=1.16.2",
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "discord-py>=2.5.2",
    "email-validator>=2.2.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "kombu>=5.5.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "python-socketio>=5.13.0",
    "python-telegram-bot[job-queue]>=22.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "telegram>=0.0.1",
    "telethon>=1.40.0",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
]
